--- a/trac/htdocs/css/browser.css
+++ b/trac/htdocs/css/browser.css
@@ -73,11 +73,15 @@ div.message {
  padding-left: 20px;
 }
 #dirlist td.name a.parent { background-image: url(../parent.png) }
-#dirlist td.name a.dir { background-image: url(../folder.png) }
-#dirlist td.name a.file { background-image: url(../file.png) }
-#dirlist td.name a, #dirlist td.rev a { border-bottom: none; display: block }
+#dirlist td.name span.direxpand { background-image: url(../folder.png) }
+#dirlist td.name span.dirfold { background-image: url(../expanded.png) }
+#dirlist td.name a.dir { padding-left: 0 }
+#dirlist td.name a.file { background-image: url(../file.png); display: block }
+#dirlist td.name a, #dirlist td.rev a { border-bottom: none }
 #dirlist td.rev { text-align: right }
 #dirlist td.change { font-size: 85%; vertical-align: middle; white-space: nowrap }
+
+#dirlist td span.loading { background-image: url(../loading.gif); font-style: italic }
 
 /* Style for the ''View Changes'' button and the diff preparation form */
 #anydiff { margin: 0 0 1em; float: left }
