--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -16,6 +16,10 @@
         $("#jumploc select").change(function () {
           this.parentNode.parentNode.submit();
         })
+
+        <py:if test="dir">
+          enableExpandDir($(this));
+        </py:if>
         <py:if test="file and file.annotate">
           enableBlame("${href.changeset()}/", "${path}");
         </py:if>
@@ -96,36 +100,7 @@
                 </td>
               </tr>
             </py:if>
-            <py:for each="idx, entry in enumerate(dir.entries)">
-              <py:with vars="change = dir.changes[entry.rev]">
-                <tr class="${idx % 2 and 'even' or 'odd'}">
-                  <td class="name">
-                    <a class="${entry.kind}"
-                      title="${entry.isdir and 'Browse Directory' or 'View File'}"
-                      href="${href.browser(entry.path, rev=stickyrev, order=(dir.order != 'name' and dir.order or None), desc=dir.desc)}">$entry.name</a>
-                  </td>
-                  <td class="size">${sizeinfo(entry.content_length)}</td>
-                  <td class="rev">
-                    <a title="View Revision Log"
-                      href="${href.log(entry.path, rev=rev)}">$entry.rev</a>
-                  </td>
-                  <td class="age" style="${dir.timerange and 'color: rgb(%s)' %
-                       ', '.join([str(color) for color in
-                                  dir.colorize_age(dir.timerange.relative(change.date))]) or ''}">
-                    ${dateinfo(change.date)}
-                  </td>
-                  <td class="change">
-                    <span class="author">${authorinfo(change.author)}:</span>
-                    <span class="change" py:choose="">
-                      <py:when test="wiki_format_messages">
-                        ${wiki_to_oneliner(context('changeset', change.rev), change.message, shorten=True)}
-                      </py:when>
-                      <py:otherwise>${shorten_line(change.message)}</py:otherwise>
-                    </span>
-                  </td>
-                </tr>
-              </py:with>
-            </py:for>
+            <xi:include href="dir_entries.html" />
           </tbody>
         </table>
       </py:if>
