--- a/trac/templates/about.html
+++ b/trac/templates/about.html
@@ -8,6 +8,11 @@
   <head>
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="${chrome.htdocs_location}css/about.css" />
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $("#systeminfo table").append("<tr><th>jQuery:</th><td>"+$().jquery+"</td></tr>");
+      });
+    </script>
   </head>
 
   <body>
