--- a/trac/versioncontrol/templates/browser.html
+++ b/trac/versioncontrol/templates/browser.html
@@ -18,7 +18,7 @@
         })
 
         <py:if test="dir">
-          enableExpandDir($(this));
+          enableExpandDir("", $("#dirlist tr"));
         </py:if>
         <py:if test="file and file.annotate">
           enableBlame("${href.changeset()}/", "${path}");
