--- a/trac/htdocs/css/admin.css
+++ b/trac/htdocs/css/admin.css
@@ -39,12 +39,16 @@ form#addplug { width: 35% }
 .plugin { background: #f7f7f7; border: 1px solid #d7d7d7; margin: 0 0 2em;
   padding: 2px .5em; text-align: left; width: 60%;
 }
-.plugin h3 { background: url(../expanded.png) 0 50% no-repeat;
-  margin: .5em 0 0; padding-left: 16px;
+.plugin h3 { margin: .5em 0; color: #bb0000;}
+.plugin h3 a { 
+ padding: 2px .5em; text-align: left; width: 60%;
 }
-.collapsed h3 { background-image: url(../collapsed.png); }
+.plugin h3 a { background: url(../expanded.png) 0 50% no-repeat;
+ padding-left: 16px;
+}
+.collapsed h3 a { background-image: url(../collapsed.png); }
 .plugin .buttons { margin-top: 0; text-align: right }
-.plugin .uninstall { margin-top: -2em; padding: 0 }
+.plugin .uninstall { margin-top: -2.6em; padding: 0 }
 .plugin .summary, .plugin .info { color: #999; font-size: 80%;
   padding-left: 16px;
 }
