--- a/trac/ticket/templates/query_results.html
+++ b/trac/ticket/templates/query_results.html
@@ -57,14 +57,18 @@
             </py:for>
           </tr>
 
-          <tr py:if="query.verbose" class="fullrow">
-            <td colspan="${len(headers)}">
-              <p class="meta">Reported by <strong>${result.reporter}</strong>,
-                ${dateinfo(result.time)} ago<py:if test="result.description">:</py:if></p>
-              <p py:if="result.description">${wiki_to_html(context('ticket', result.id), result.description)}</p>
-            </td>
-          </tr>
-
+          <py:with vars="result_rows = [t for t in row if result[t]]">
+            <tr py:if="result_rows" class="fullrow">
+              <td colspan="${len(headers)}">
+                <p class="meta">Reported by <strong>${authorinfo(result.reporter)}</strong>,
+                  ${dateinfo(result.time)} ago.</p>
+              </td>
+            </tr>
+            <tr py:for="r in result_rows" class="fullrow">
+              <th class="meta">$r</th>
+              <td colspan="${len(headers)-1}">${wiki_to_html(context('ticket', result.id), result[r])}</td>
+            </tr>
+          </py:with>
         </py:for>
       </tbody>
     </table>
