--- a/trac/templates/diff_div.html
+++ b/trac/templates/diff_div.html
@@ -37,13 +37,13 @@
 
   <ul class="entries">
     <py:for each="idx, item in enumerate(changes)">
-      <li py:if="item.diffs or item.props" class="entry">
+      <li py:if="item.diffs or item.props" class="entry" py:with="comments = item.get('comments')">
         <h2 id="${not no_id and 'file%s' % idx or None}" py:choose="">
           <a py:when="item.new.path" title="${item.get('title', item.new.get('title'))}"
              href="${item.get('href', item.new.get('href'))}">$item.new.path</a>
           <py:otherwise>&nbsp;</py:otherwise>
         </h2>
-        <pre py:if="'comments' in item">$item.comments</pre>
+        <pre py:if="comments">$comments</pre>
         <ul py:if="item.props" class="props">
           <py:for each="prop in item.props" py:choose="">
             <py:with vars="one = prop.old or prop.new;
